add delete by id function in review