@@ -1,9 +1,7 @@
 package com.bootcodingtask.rating_functionality.controllers;
 
-import com.bootcodingtask.rating_functionality.entities.Reviews;
-import com.bootcodingtask.rating_functionality.models.UsersResponse;
 import com.bootcodingtask.rating_functionality.entities.Users;
-import com.bootcodingtask.rating_functionality.services.ReviewsServices;
+import com.bootcodingtask.rating_functionality.models.UsersResponse;
 import com.bootcodingtask.rating_functionality.services.UsersServices;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -11,7 +9,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("api/users")
@@ -20,57 +17,48 @@ public class UsersController {
     @Autowired
     private UsersServices usersServices;
 
-    @Autowired
-    private ReviewsServices reviewsServices;
-
-    @PostMapping("id/{id}/users/id/{userId}/mockdrives/id/{mockDriveId}")
-    public ResponseEntity<Reviews> createOrUpdateReview(
-            @PathVariable Integer userId,
-            @PathVariable Integer mockDriveId,
-            @RequestBody Reviews review) {
+    @PostMapping
+    public ResponseEntity<?> createUser(@RequestBody Users myUser) {
         try {
-            Reviews savedReview = reviewsServices.saveOrUpdateReview(userId, mockDriveId, review);
-            return new ResponseEntity<>(savedReview, HttpStatus.OK);
-        } catch (IllegalArgumentException e) {
-            return new ResponseEntity<>(null, HttpStatus.BAD_REQUEST);
+            Users createdUser = usersServices.createUser(myUser);
+            UsersResponse userResponse = usersServices.mapToUsersResponse(createdUser);
+            return new ResponseEntity<>(userResponse, HttpStatus.CREATED);
+        } catch (Exception ex) {
+            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
     }
 
-
     @GetMapping
-    public ResponseEntity<List<UsersResponse>> getAllUsers() {
+    public ResponseEntity<?> getAllUsers() {
         List<Users> users = usersServices.getAllUsers();
-        List<UsersResponse> responseList = users.stream()
+        List<UsersResponse> usersResponses = users.stream()
                 .map(usersServices::mapToUsersResponse)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(responseList);
+                .toList();
+        return ResponseEntity.ok(usersResponses);
     }
 
     @GetMapping("id/{id}")
-    public ResponseEntity<UsersResponse> getUserById(@PathVariable Integer id) {
+    public ResponseEntity<?> getUserById(@PathVariable Integer id) {
         Optional<Users> user = usersServices.getUsersById(id);
-        if (user.isPresent()) {
-            UsersResponse response = usersServices.mapToUsersResponse(user.get());
-            return new ResponseEntity<>(response, HttpStatus.OK);
-        }
-        return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        return user.map(value -> new ResponseEntity<>(usersServices.mapToUsersResponse(value), HttpStatus.OK))
+                .orElseGet(() -> new ResponseEntity<>(HttpStatus.NOT_FOUND));
     }
 
     @PutMapping("id/{id}")
-    public ResponseEntity<UsersResponse> updateUserById(@PathVariable Integer id, @RequestBody Users newEntry) {
+    public ResponseEntity<?> updateUserById(@PathVariable Integer id, @RequestBody Users newEntry) {
         Users updatedUser = usersServices.updateUser(id, newEntry);
-        if (updatedUser != null) {
-            UsersResponse response = usersServices.mapToUsersResponse(updatedUser);
-            return new ResponseEntity<>(response, HttpStatus.OK);
-        }
-        return new ResponseEntity<>(HttpStatus.NOT_FOUND);
+        return updatedUser != null ? new ResponseEntity<>(usersServices.mapToUsersResponse(updatedUser), HttpStatus.OK)
+                : new ResponseEntity<>(HttpStatus.NOT_FOUND);
     }
 
     @DeleteMapping("id/{id}")
-    public ResponseEntity<Void> deleteUserById(@PathVariable Integer id) {
-        if (usersServices.deleteUserByID(id)) {
+    public ResponseEntity<?> deleteUserById(@PathVariable Integer id) {
+        boolean isDeleted = usersServices.deleteUserByID(id);
+
+        if (isDeleted) {
             return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+        } else {
+            return new ResponseEntity<>(HttpStatus.NOT_FOUND);
         }
-        return new ResponseEntity<>(HttpStatus.NOT_FOUND);
     }
 }
